@@ -7,9 +7,9 @@
 
 <span class="heading1">Programming with SQL Relay using JDBC</span><br><br>
 
-<p>The SQL Relay distribution does not provide a native JBCD driver, but by using the ODBC-to-JDBC bridge provided by most Java distributions, applications which use JDBC on Unix or Linux may access databases through SQL Relay via the ODBC driver.</p>
+<p>The SQL Relay distribution does not provide a native JBCD driver, but by using the JDBC-ODBC bridge provided by most Java distributions, applications which use JDBC on Unix or Linux may access databases through SQL Relay via the ODBC driver.</p>
 
-<p>Note that the ODBC driver lacks some features, hasn't been thoroughly tested and is not currently supported on Windows, but still may be useful for some applications.</p>
+<p>Note that the JDBC-ODBC bridge is not available in OpenJDK and was removed from Oracle Java in version 8.  To use the JDBC-ODBC bridge, you must use Oracle Java 7 or earlier.</b>
 
 <p>See <a href="odbc.html">Programming with SQL Relay using ODBC</a> for instructions detailing how to access SQL Relay through ODBC.  Once that is working, you can access databases through SQL Relay via JDBC as well.</p>
 
