@@ -7,7 +7,7 @@
 
 <span class="heading1">Programming with SQL Relay using ODBC</span><br><br>
 
-<p>The SQL Relay distribution provides a basic ODBC driver, enabling applications which use ODBC on Unix or Linux to access SQL Relay.  The driver lacks some features, hasn't been thoroughly tested and is not currently supported on Windows, but still may be useful for some applications.</p>
+<p>The SQL Relay distribution provides an ODBC driver, enabling applications which use ODBC on Unix or Linux to access SQL Relay.  The driver is not currently supported on Windows.</p>
 
 <p>With unixODBC or iODBC, you can create an instance for the SQL Relay driver by adding an entry like the following to your ODBC instances file (usually /etc/odbcinst.ini)</p>
 
