@@ -55,6 +55,7 @@
 	added custom db/statement attributes to perl DBI for
 		DontGetColumnInfo, GetNullsAsEmptyStrings and
 		ResultSetBufferSize
+	added note about JDBC-ODBC bridge removal in Oracle Java 8
 
 0.57 - fixed an overloaded virtual function error in sqlr-status
 	fixed parsing of "term as type" clauses in queries
